<resources>
    <string name="app_name">Библиотеки Архангельска</string>
    <string name="news">Новости</string>
    <string name="actual">Актуальное</string>
    <string name="afisha">Афиша</string>
    <string name="services">Сервисы</string>
    <string name="catalog">Электронный каталог</string>
    <string name="prolongation">Продление онлайн</string>
    <string name="libraries_on_map">Библиотеки на карте города</string>
    <string name="contacts">Контакты</string>
    <string name="virtual_help">Виртуальная справка</string>
    <string name="ask_lawyer">Вопрос юристу</string>
    <string name="about">О приложении</string>

    <string name="post_image">картинка к новости</string>
    <string name="post_activity_title">Просмотр новости</string>
    <string name="post_share">Поделиться</string>
    <string name="post_open_in_browser">Открыть в браузере</string>

    <string name="about_version">Версия</string>
    <string name="about_rate">Оценить приложение</string>
    <string name="about_licenses">Лицензии открытого ПО</string>

    <string name="loading_error">Ошибка при загрузке</string>
    <string name="retry">Повторить</string>
    <string name="empty_actual">Сейчас ничего интересного не происходит. Проверьте позже.</string>
</resources>
